Added changeset view tree Added httpclient timeouts Fixed welcome page link and icon

--- a/com.cloudbees.eclipse.ui/intro/css/intro.css
+++ b/com.cloudbees.eclipse.ui/intro/css/intro.css
@@ -1,3 +1,3 @@
 
-a#comcloudbeeseclipseui-introLink img { background-image : url(graphics/intro.gif); }
-a#comcloudbeeseclipseui-introLink:hover img { background-image : url(graphics/intro_hov.gif); }
+a#comcloudbeeseclipseui-introLink img { background-image : url(graphics/cb_intro3.gif); }
+a#comcloudbeeseclipseui-introLink:hover img { background-image : url(graphics/cb_intro_hov.gif); }
